--- a/client/src/app/all-tasks/all-tasks.html
+++ b/client/src/app/all-tasks/all-tasks.html
@@ -1,1 +1,11 @@
-<p>all-tasks works!</p>
+<section>
+    <form>
+        <select #filters name="status" id="status-select" (change)="updateStatusFilter(filters.value)">
+            @for (option of statusFilter; track option){
+                <option value="{{option.name}}">{{option.name}}</option>
+            }
+        </select>
+    </form>
+
+    {{getTasks().length}}
+</section>
