finished user login

--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -3,5 +3,8 @@
 </header>
 
 <main>
+  @if (isLoggedIn()){
+    <button id="logout-button" (click)="logOut()">Log out</button>
+  }
   <router-outlet></router-outlet>
 </main>
